--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 
 # H2 DB connection settings:
-h2.url=jdbc:h2:C:\\Users\\rybakov\\Documents\\_DataBases\\test.h2.app.db;INIT=RUNSCRIPT FROM 'classpath:init.ddl';AUTO_SERVER=TRUE;
+h2.url=jdbc:h2:/opt/_databasesH2/getawr.h2.app.db;INIT=RUNSCRIPT FROM 'classpath:init.ddl';AUTO_SERVER=TRUE;
 h2.user=app-user
 h2.pass=a12-45a
 
-# Size pool of datasources
-dspool.initcapasity=128
-dspool.loadfactor=0.75F
-dspool.concurencylevel=16
+# Guava
+guava.cache=concurrencyLevel=16, initialCapacity=32, maximumSize=128, expireAfterAccess=1h
 
-# Logger
